tests/error/modifier_errors/captured_modifier_in_branch.err
Error: Variable assigned in modifier block (at $FILE:10:8)
   | 
 8 |         if b:
 9 |             x = 3
10 |     c = x + 1
   |         ^ `x` cannot be used...

Note:
   | 
 8 |         if b:
 9 |             x = 3
   |             ----- ... since it was defined in a modifier block

Help: Variables assigned inside a modifier block are not available outside the
block

Guppy compilation failed due to 1 previous error
